--- a/index.html
+++ b/index.html
@@ -10,44 +10,45 @@
 
         window.undoAES = async (buffer, pass = 'lol123') => {
             const material = await crypto.subtle.importKey(
-                "raw",
-                tE.encode(pass),
+                "raw", tE.encode(pass),
                 { name: "PBKDF2" },
-                false,
-                ["deriveBits"]
+                false, ["deriveBits"]
             );
             const derived = await crypto.subtle.deriveBits({
                 name: "pbkdf2",
                 hash: "sha-512",
-                salt: buffer.slice(0, 16),
-                iterations: 151681
+                salt: buffer.slice(0, 16), iterations: 151681
             }, material, 352);
             const algo = {
                 name: 'aes-gcm',
                 iv: derived.slice(0, 12),
                 additionalData: tE.encode('ひとりぼっちの○○生活')
             };
-            return crypto.subtle.decrypt(
+            const plaintext = await crypto.subtle.decrypt(
                 algo,
                 await crypto.subtle.importKey("raw", derived.slice(12), algo, false, ["decrypt"]),
                 buffer.slice(16)
             );
+            const mimeLen = 1 + new Uint8Array(plaintext.slice(0, 1))[0];
+            return [
+                new TextDecoder().decode(plaintext.slice(1, mimeLen)),
+                plaintext.slice(mimeLen)
+            ];
         };
 
         window.loadContents = async (buffer, pass) => {
-            let plaintext = await undoAES(buffer, pass)
-                .catch(async () => await (await import('./js/pass.js')).getPlain(buffer));
+            let [mime, plaintext] = await undoAES(buffer, pass)
+                .catch(async (e) => await (await import('./js/pass.js')).getPlain(buffer));
+
             try {
-                if (plaintext.byteLength > 0x400)
-                    throw 'too long';
-                const url = new URL(new TextDecoder().decode(plaintext));
-                location.href = url;
-                await new Promise(r => setTimeout(() => r(), 3e3));
-                body.innerHTML = 'no redirection? <a>click here</a>';
-                body.querySelector('a').href = url;
+                if (/text\/uri-list|text\/x-uri/.test(mime) && plaintext.byteLength < 0x400) {
+                    const url = new URL(new TextDecoder().decode(plaintext));
+                    location.href = url;
+                    setTimeout(() => body.innerHTML = `no redirection? <a href="${url}">click here</a>`, 3e3);
+                } else throw 'invalid url';
             } catch {
                 body.innerHTML = '';
-                (await import('./js/render.js')).render(plaintext);
+                (await import('./js/render.js')).render(mime, plaintext);
             }
         };
 
