[tweak] better handle of unknown mime type
if no mime type, writes in the header as /[file-ext] (if any)

--- a/create.htm
+++ b/create.htm
@@ -254,7 +254,14 @@
                 let plaintext, mime = '';
                 if (file) {
                     plaintext = await new Response(file).arrayBuffer();
-                    mime = file.type;
+                    mime = (() => {
+                        if (file.type) {
+                            return file.type;
+                        } else {
+                            const name = file.name.split('.');
+                            return name.length > 1 ? `/${name.pop()}` : '';
+                        }
+                    })();
                 } else {
                     plaintext = tE.encode(content.value);
                     try {
