[tweak] font-family [tweak] charset utf-8

--- a/create.htm
+++ b/create.htm
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>create file</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Sans+Mono&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -15,7 +17,7 @@
             user-select: none;
             color: white;
             background-color: black;
-            font-family: monospace;
+            font-family: 'Noto Color Emoji', 'Noto Sans Mono', monospace;
             font-size: 1.15cm;
         }
 
