--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="user-select: none;color:#eee;background-color: #000;" lang="en">
 
 <head>
+    <meta charset="utf-8">
     <script type="module">
         const tE = new TextEncoder();
 
