[fix] font-family order

--- a/create.htm
+++ b/create.htm
@@ -17,7 +17,7 @@
             user-select: none;
             color: white;
             background-color: black;
-            font-family: 'Noto Color Emoji', 'Noto Sans Mono', monospace;
+            font-family: 'Noto Sans Mono', monospace, 'Noto Color Emoji', sans-serif;
             font-size: 1.15cm;
         }
 
